# pegsolitaire

./: .gitignore  .indent.pro  AUTHORS  CHANGELOG  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure  configure.ac  distinfo  generate-data-header  pegsolitaire.desktop.in  pegsolitaire.spec  pkg-descr  pkg-plist
data/: com.github.jnumm.pegsolitaire.appdata.xml.in  pegsolitaire.6  pegsolitaire.glade
help/: Makefile.am  Makefile.in  pegsolitaire.xml
po/: Makevars  POTFILES.in  de.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  game.c  game.h  glade-strings.c  gridframe.c  gridframe.h  i18n.h  interface.c  interface.h  main.c  pegsolitaire.glade  pegsolitaire.ui  preimage.c  preimage.h  render.c  render.h  share.h  support.c  support.h
src/pixmaps/: Makefile.am  Makefile.in
